[package]
name = "teaclave_dcap_ref_as"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave DCAP Attestation Service (Reference Implementation)"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64           = { version = "0.13.0" }
hex              = { version = "0.4.0" }
serde            = { version = "1.0.92", features = ["derive"] }
serde_json       = { version = "1.0.39" }
rocket           = { git = "https://github.com/SergioBenitez/Rocket", rev = "dfc9e9aab01d349da32c52db393e35b7fffea63c", features = ["tls"] }
libc             = { version = "0.2.66" }
rand             = { version = "0.7.3" }
ring             = { version = "0.16.11" }
untrusted        = { version = "0.7.0" }
uuid             = { version = "0.8.1", features = ["v4"] }
chrono           = { version = "0.4.10" }
lazy_static      = { version = "1.4.0" }
percent-encoding = { version = "2.1.0" }
pem              = { version = "0.7.0" }

sgx_types        = { version = "1.1.3" }
sgx_ucrypto      = { version = "1.1.3" }
