[package]
name = "teaclave_file_agent"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave file agent for worker"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "teaclave_file_agent"
crate-type = ["staticlib", "rlib"]

[features]
default = []

[dependencies]
log           = { version = "0.4.6", features = ["release_max_level_info"] }
anyhow        = { version = "1.0.26" }
base64        = { version = "0.13.0" }
serde_json    = { version = "1.0.39" }
serde         = { version = "1.0.92", features = ["derive"] }
thiserror     = { version = "1.0.9" }
itertools     = { version = "0.8.0", default-features = false }

teaclave_types = { path = "../types" }
teaclave_test_utils = { path = "../tests/utils", optional = true }

url             = { version = "2.1.1", features = ["serde"]}
tokio           = { version = "0.2", features = ["rt-core", "rt-threaded", "fs"] }
tokio-util      = { version = "0.3", features = ["codec"] }
futures         = { version = "0.3" }
futures-util    = { version = "0.3.0", default-features = false }
reqwest         = { version = "0.10", features = ["json", "stream"] }
http            = { version = "0.2" }