[package]
name = "teaclave_function"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave function"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "teaclave_function"
crate-type = ["staticlib", "rlib"]

[features]
default = []
mesalock_sgx = [
  "sgx_tstd",
  "teaclave_types/mesalock_sgx",
]
cov = ["sgx_cov"]
enclave_unit_test = [
  "teaclave_test_utils/mesalock_sgx",
  "teaclave_runtime/mesalock_sgx"
]

[dependencies]
log           = { version = "0.4.6" }
anyhow        = { version = "1.0.26" }
serde_json    = { version = "1.0.39" }
serde         = { version = "1.0.92", features = ["derive"] }
thiserror     = { version = "1.0.9" }
gbdt          = { version = "0.1.0", features = ["input", "enable_training"] }
rusty-machine = { version = "0.5.4" }
itertools     = { version = "0.8.0", default-features = false }
teaclave_types = { path = "../types" }
teaclave_runtime = { path = "../runtime", optional = true }
teaclave_test_utils = { path = "../tests/utils", optional = true }

sgx_cov       = { version = "1.1.0", optional = true }
sgx_tstd      = { version = "1.1.0", features = ["net", "thread", "backtrace"], optional = true }
sgx_types     = { version = "1.1.0" }
