[package]
name = "teaclave_ipc"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave IPC"
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = [
    "sgx_tstd",
    "teaclave_types/mesalock_sgx",
]
enclave_unit_test = []

[dependencies]
serde        = { version = "1.0.92", features = ["derive"] }
anyhow       = { version = "1.0.26" }
serde_json   = { version = "1.0.39" }
log          = { version = "0.4.6" }

teaclave_ipc_attribute = { path = "./attribute" }
teaclave_types         = { path = "../types" }
teaclave_config = { path = "../config" }

sgx_tstd  = { version = "1.1.0", features = ["net", "backtrace"], optional = true }
sgx_types = { version = "1.1.0" }
