[package]
name = "mesatee_config"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Compile-time and runtime configuration utilities for MesaTEE."
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[lib]
name = "mesatee_config"
path = "src/lib.rs"

[features]
default = []
mesalock_sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd  = { version = "1.0.8", features = ["net"], optional = true }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
toml = "0.5.1"
serde_derive = "1.0.93"
serde = "1.0.93"

[build-dependencies]
toml = "0.5.1"
serde_derive = "1.0.93"
serde = "1.0.93"
