[package]
name = "teaclave_rpc"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave RPC"
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = [
    "sgx_trts",
    "sgx_tstd",
    "teaclave_types/mesalock_sgx",
    "teaclave_attestation/mesalock_sgx",
]

[dependencies]
anyhow     = { version = "1.0.26" }
cfg-if     = { version = "0.1.9" }
http       = { version = "0.2" }
log        = { version = "0.4.6", features = ["release_max_level_info"] }
rustls     = { version = "0.16.0", features = ["dangerous_configuration"] }
serde      = { version = "1.0.92", features = ["derive"] }
serde_json = { version = "1.0.39" }
thiserror  = { version = "1.0.9" }
threadpool = { version = "1.8.0" }
webpki     = { version = "0.21.0" }

teaclave_types       = { path = "../types" }
teaclave_attestation = { path = "../attestation" }
teaclave_rpc_proc_macro = { path = "./proc_macro" }

sgx_trts = { version = "1.1.3", optional = true }
sgx_tstd = { version = "1.1.3", features = ["net", "backtrace", "thread"], optional = true }
