# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "teaclave_rpc"
version = "0.5.1"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave RPC"
license = "Apache-2.0"
edition = "2021"

[features]
default = []
app = [
    "libc",
    "teaclave_types/app",
    "teaclave_attestation/app"
]
mesalock_sgx = [
    "sgx_libc",
    "teaclave_types/mesalock_sgx",
    "teaclave_attestation/mesalock_sgx",
]

[dependencies]
anyhow     = { version = "1.0.26" }
cfg-if     = { version = "0.1.9" }
http       = { version = "0.2" }
libc       = { version = "0.2.66", optional = true }
log        = { version = "0.4.17", features = ["release_max_level_info"] }
rustls     = { version = "0.17.0", features = ["dangerous_configuration"] }
serde      = { version = "1.0.92", features = ["derive"] }
serde_json = { version = "1.0.39" }
thiserror  = { version = "1.0.9" }
threadpool = { version = "1.8.0" }
webpki     = { version = "0.21.0" }

teaclave_types       = { path = "../types" }
teaclave_attestation = { path = "../attestation" }
teaclave_rpc_proc_macro = { path = "./proc_macro" }

sgx_libc = { version = "2.0.0", optional = true }
