[package]
name = "teaclave_ra"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Teaclave RA"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "teaclave_ra"
path = "src/lib.rs"

[features]
default = []
mesalock_sgx = ["sgx_tstd", "sgx_tcrypto", "sgx_rand", "sgx_tse"]
ipc = []

[dependencies]
anyhow = { version = "1.0.26" }
thiserror = { version = "1.0.9" }
yasna        = { version = "0.3.0", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint   = { version = "0.2.2" }
bit-vec      = { version = "0.6.1", default-features = false }
chrono       = { version = "0.4.6" }
webpki       = { version = "0.21.0" }
webpki-roots = { version = "0.17.0" }
rustls       = { version = "0.16.0", features = ["dangerous_configuration"] }
base64       = { version = "0.10.1" }
httparse     = { version = "1.3.2", default-features = false }
log          = { version = "0.4.6" }
cfg-if          = { version = "0.1.9" }

sgx_tstd  = { version = "1.1.0", features = ["net", "backtrace"], optional = true }
sgx_types = { version = "1.1.0" }
sgx_tcrypto = { version = "1.1.0", optional = true }
sgx_rand  = { version = "1.1.0", optional = true }
sgx_tse   = { version = "1.1.0", optional = true }

teaclave_utils = { path = "../teaclave_utils" }