[package]
name = "teaclave_worker"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave worker"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "teaclave_worker"
crate-type = ["staticlib", "rlib"]

[features]
default = []
mesalock_sgx = [
  "sgx_tstd",
  "teaclave_types/mesalock_sgx",
  "teaclave_executor/mesalock_sgx",
  "teaclave_runtime/mesalock_sgx"
]
cov = ["sgx_cov"]
enclave_unit_test = ["teaclave_test_utils/mesalock_sgx"]

[dependencies]
log           = { version = "0.4.6", features = ["release_max_level_info"] }
anyhow        = { version = "1.0.26" }
serde_json    = { version = "1.0.39" }
thiserror     = { version = "1.0.9" }

teaclave_types = { path = "../types" }
teaclave_executor = { path = "../executor", features = ["full_builtin_function"] }
teaclave_runtime = { path = "../runtime" }
teaclave_test_utils = { path = "../tests/utils", optional = true }

sgx_cov       = { version = "1.1.3", optional = true }
sgx_tstd      = { version = "1.1.3", features = ["net", "thread", "backtrace"], optional = true }
sgx_types     = { version = "1.1.3" }
