# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "teaclave_worker"
version = "0.5.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave worker"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "teaclave_worker"
crate-type = ["staticlib", "rlib"]

[features]
default = []
app = [
  "teaclave_types/app",
  "teaclave_executor/app",
  "teaclave_runtime/app"
]
mesalock_sgx = [
  "teaclave_types/mesalock_sgx",
  "teaclave_executor/mesalock_sgx",
  "teaclave_runtime/mesalock_sgx"
]
cov = ["sgx_cov"]
enclave_unit_test = ["teaclave_test_utils/mesalock_sgx"]

[dependencies]
log           = { version = "0.4.17", features = ["release_max_level_info"] }
anyhow        = { version = "1.0.26" }
serde_json    = { version = "1.0.39" }
thiserror     = { version = "1.0.9" }

teaclave_types = { path = "../types" }
teaclave_executor = { path = "../executor", features = ["full_builtin_function"] }
teaclave_runtime = { path = "../runtime" }
teaclave_test_utils = { path = "../tests/utils", optional = true }

sgx_cov       = { version = "2.0.0", optional = true }

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types     = { version = "2.0.0" }
