[package]
name = "teaclave_binder_attribute"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Macros for binder"
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
