[package]
name = "mayfail"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = ["sgx_tstd", "mesatee_core/mesalock_sgx"]
sgx_tstd        = { version = "1.1.0", features = ["net", "backtrace"], optional = true }

[dependencies]
mesatee_core    = { version = "0.1.0" }
