[package]
name = "protected_fs_rs"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Ported sgx_protected_fs (Intel SGX SDK) running out side sgx with Rust bindings."
license-file = "Apache-2.0"
edition = "2018"

[lib]
name = "protected_fs"

[features]
default = []
mesalock_sgx = ["sgx_tstd", "sgx_types", "sgx_trts"]

[dependencies]
cfg-if      = { version = "0.1.9" }
rdrand      = { version = "0.6", default-features = false }
rand_core   = { version = "0.4", default-features = false }

libc        = { version = "0.2" }

sgx_types = { version = "1.1.2", optional = true }
sgx_tstd = { version = "1.1.2",  optional = true }
sgx_trts = { version = "1.1.2", optional = true }


[build-dependencies]
cfg-if      = { version = "0.1.9" }