[package]
name = "protected_fs_rs"
version = "0.4.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Ported sgx_protected_fs (Intel SGX SDK) running out side sgx with Rust bindings."
license-file = "Apache-2.0"
edition = "2021"

[lib]
name = "protected_fs"

[features]
default = []
mesalock_sgx = ["sgx_tse"]

[dependencies]
cfg-if      = { version = "0.1.9" }
rdrand      = { version = "0.6", default-features = false }
rand_core   = { version = "0.4", default-features = false }

libc        = { version = "0.2" }

[build-dependencies]
cfg-if      = { version = "0.1.9" }

sgx_tse     = { version = "2.0.0", features = ["capi"], optional = true }
