[package]
name = "rusty-leveldb"
version = "1.0.4"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "A compatible re-implementation of LevelDB in Rust"
homepage = "https://github.com/dermesser/leveldb-rs"
repository = "https://github.com/dermesser/leveldb-rs"
readme = "README.md"
keywords = ["LevelDB", "key-value", "database", "SSTable", "Google"]
license = "MIT"
publish = true
edition = "2021"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tprotected_fs", "sgx_libc"]
enclave_unit_test = ["teaclave_test_utils/mesalock_sgx"]

[dependencies]
crc 		= { version = "2.0" }
rand 		= { version = "0.8" }
snap 		= { version = "0.2" }
integer-encoding = { version = "1.0" }

sgx_tprotected_fs  = { version = "2.0.0", optional = true }
teaclave_test_utils = { path = "../../tests/utils", optional = true }

sgx_libc	= { version = "2.0.0", optional = true }
