[package]
name = "teaclave_service_config"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Teaclave service config"
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = [
    "sgx_tstd",
    "teaclave_config/mesalock_sgx",
    "teaclave_utils/mesalock_sgx",
    "teaclave_attestation/mesalock_sgx"
]

[dependencies]
env_logger   = { version = "0.7.1" }
anyhow       = { version = "1.0.26" }
log          = { version = "0.4.6" }
lazy_static  = { version = "1.0.2", features = ["spin_no_std"] }
sgx_tstd  = { version = "1.1.0", features = ["net", "backtrace"], optional = true }

teaclave_config = { path = "../../config" }
teaclave_attestation = { path = "../../attestation" }
teaclave_utils = { path = "../../utils" }