[package]
name = "teaclave_service_sgx_utils"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Teaclave sgx utils"
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = [
    "sgx_tstd",
    "teaclave_service_config/mesalock_sgx",
]

[dependencies]
env_logger   = { version = "0.7.1" }
anyhow       = { version = "1.0.26" }
log          = { version = "0.4.6" }
sgx_tstd  = { version = "1.1.0", features = ["net", "backtrace"], optional = true }

teaclave_service_config = { path = "../../common/service_config" }
teaclave_service_sgx_utils_proc_macro = { path = "./proc_macro" }
