[package]
name = "config_gen"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Generating build config."
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "config_gen"
path = "main.rs"

[dependencies]
pem = "0.7.0"
serde = "1.0.92"
serde_derive = "1.0.92"
toml = "0.5.1"
