[package]
name = "teaclave_config_gen"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Generating build config."
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "config_gen"
path = "main.rs"

[dependencies]
askama = "0.8"
structopt = "0.3"
pem = "0.7.0"
serde = { version = "1.0.92", features = ["derive"] }
toml = "0.5.1"
